<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardCornerRadius="40dp"
        android:padding="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sign_in_continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/welcome"
                        android:text="@string/sign_in_to_continue"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/log_Btn_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/background"
                    android:textSize="18sp" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout.GrayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/log_EmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColorHighlight="@color/text_color"
                    android:textColorHint="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout.GrayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/log_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColorHighlight="@color/text_color"
                    android:textColorHint="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/log_Tv_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_LogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/primary"
                android:text="@string/sign_in"
                android:textColor="@color/white" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>